--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Designco</title>
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <title>Designco</title>
+  <link rel="stylesheet" href="screen.css">
+</head>
+
+<body>
+  <div class= "container">
+    <div class= "love"><h1>Designco</h1></div>
+     
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contacts">Contacts</a></li>
+        <li><img class=line src="icon-search.png"></li>
+      </ul>
+    </div>
+<p>
+ <div class="love2">
+   <h2>The Details Matter</h2>
+ <p>
+   we're making beautiful websites layouts using modern methodes.
+ </div>
+ 
+  <div class="imager123">
+    <img src="https://unsplash.it/200/300/?random">
+    <img src="https://unsplash.it/200/300/?random">
+    <img src="https://unsplash.it/200/300/?random"> 
+  </div>
+  <div class=c2>
+    <h3>whats new<h3>
+    <ul>
+      <li>We always have new projects that clients hire us for</li>
+      <li>asdfasdfasdfqewfawr asdfasdfasdfqewfawr</li>
+      <li>asdfasdfasdfqewfawr asdfasdfasdfqewfawr</li>
+      
+    </ul>
+    </div>
+</body>
+
 </html>
